# praticas_embarcatech

./: README.md
Game_Car_Higway_Pico-main/: CMakeLists.txt  README.md  picow_http_client.c
Game_Car_Higway_Pico-main/web/: README.md  server.py
Game_Car_Higway_Pico-main/web/static/: game.js  style.css
Game_Car_Higway_Pico-main/web/templates/: index.html
MQTT_EXAMPLE-main/: CMakeLists.txt  lwipopts.h  mqtt_example.c
Servidor_Flask_Pico_Wifi/: CMakeLists.txt  README.md  example_http_client_util.c  picow_http_client.c
Servidor_Flask_Pico_Wifi/web/: server.py
Servidor_Flask_Pico_Wifi/web/templates/: index.html
bitdoglab_programador_ppa/: CMakeLists.txt  pico_sdk_import.cmake
bitdoglab_programador_ppa/include/: prog_ppa.h
bitdoglab_programador_ppa/src/: main.c
display_oled_botoes/: CMakeLists.txt
led_control_webserver/: led_control_webserver.c
meu_led/: CMakeLists.txt
meu_led/include/: led_utils.h
meu_led/src/: led_utils.c  meu_led.c
microphone_dma/: CMakeLists.txt
pico_multiprojetos/: CMakeLists.txt
pico_multiprojetos/app_controle_acesso/: CMakeLists.txt  main.c
pico_multiprojetos/app_controle_acesso/funcoes/: controle_acesso.h
pico_multiprojetos/app_joystick/: main.c
pico_multiprojetos/app_sensors/: CMakeLists.txt  cliente_http.c  cliente_sensor_1.c  verify_http.c
pico_multiprojetos/app_servidor_flask/: CMakeLists.txt  Readme.md  picow_cliente_http.c  picow_verify_http.c
pico_multiprojetos/app_servidor_flask/lib_server/: CMakeLists.txt  example_http_client_util.c  example_http_client_util.h
pico_multiprojetos/app_servidor_flask/web/: server.py
pico_multiprojetos/app_servidor_flask/web/templates/: index.html  rosa_ventos.html
pico_multiprojetos/buzzer/: CMakeLists.txt  ZERO_CHECK.vcxproj  main.c
pico_multiprojetos/buzzer/funcoes/: controle_buzzer.c  controle_buzzer.h
pico_multiprojetos/controle_acesso/: CMakeLists.txt  main.c
pico_multiprojetos/controle_acesso/funcoes/: controle_acesso.c  controle_acesso.h
pico_multiprojetos/interface_web/: readme.md  server.py  server_main.py
pico_multiprojetos/interface_web/static/css/: estilo_principal.css
pico_multiprojetos/interface_web/static/javascripts/: scripts.js
pico_multiprojetos/interface_web/templates_html/: index.html  pratica_botoes.html  pratica_sensores.html
pico_multiprojetos/joystick/: CMakeLists.txt  main.c
pico_multiprojetos/lib/base_server/: CMakeLists.txt  exemplo_http_client_util.c
pico_multiprojetos/lib/docs_base/: base_bitdoglab.txt
pico_multiprojetos/lib/io_utils/: CMakeLists.txt  actions_io.c  actions_io.h  io_utils.c  io_utils.h
pico_multiprojetos/lib/lib_oled/: CMakeLists.txt  ssd1306_i2c.c
pico_multiprojetos/lib/matriz_utils/: CMakeLists.txt  matriz_utils.c  matriz_utils.h
pico_multiprojetos/lib/setup_utils/: CMakeLists.txt  setup_utils.c  setup_utils.h
pico_multiprojetos/matriz_led_app/: CMakeLists.txt  main.c
pico_multiprojetos/mensagem_serial/: CMakeLists.txt  main.c
pico_multiprojetos/pisca_led/: CMakeLists.txt  main.c
pico_multiprojetos/pratica_rtos/: CMakeLists.txt  main.c
pico_multiprojetos/projeto1/: CMakeLists.txt  main.c
pico_multiprojetos/projeto1/funcoes/: controle_led.c  controle_led.h
picow_ble_temp_reader/: CMakeLists.txt  client.c  server.c  server_common.c
picow_ble_temp_sensor/: CMakeLists.txt  README.md  client.c  server.c  server_common.c
picow_tcpip_server/: CMakeLists.txt
rgb_pwm/: CMakeLists.txt  rgb_pwm.c
wifiScan/: CMakeLists.txt  wifiScan.c
wifi_button_and_led/: CMakeLists.txt  pico_w_wifi_complete_example.c
